infrastructure/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemeindeverzeichnis-api
  namespace: gv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemeindeverzeichnis-api
  template:
    metadata:
      labels:
        app: gemeindeverzeichnis-api
    spec:
      containers:
        - name: api
          image: ghcr.io/jujutheonlyone/gemeindeverzeichnis-api:latest   # falls du latest willst
          imagePullPolicy: Always                                         # damit immer neu gezogen wird
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /docs/
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /docs/
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: gemeindeverzeichnis-api
  namespace: gv
spec:
  selector:
    app: gemeindeverzeichnis-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
