infrastructure/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemeindeverzeichnis-frontend
  namespace: gv
spec:
  replicas: 1
  selector:
    matchLabels: { app: gemeindeverzeichnis-frontend }
  template:
    metadata:
      labels: { app: gemeindeverzeichnis-frontend }
    spec:
      containers:
        - name: web
          image: ghcr.io/jujutheonlyone/gemeindeverzeichnis-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gemeindeverzeichnis-frontend
  namespace: gv
spec:
  type: ClusterIP
  selector: { app: gemeindeverzeichnis-frontend }
  ports:
    - port: 80
      targetPort: 80
