infrastructure/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemeindeverzeichnis-frontend
  namespace: gv
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: gv-basic-auth@kubernetescrd,gv-sec-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: gemeindeverzeichnis.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gemeindeverzeichnis-frontend
            port:
              number: 80
  - host: www.gemeindeverzeichnis.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gemeindeverzeichnis-frontend
            port:
              number: 80
  tls:
  - hosts:
    - gemeindeverzeichnis.de
    - www.gemeindeverzeichnis.de
